tests/suppress/suppress.exp
Error ------------------------------------------------------------------------------------------------------- A.js:16:21

Cannot assign `123` to `test4` because number [1] is incompatible with string [2]. [incompatible-type]

   A.js:16:21
   16| var test4: string = 123; // This error is NOT suppressed
                           ^^^ [1]

References:
   A.js:16:12
   16| var test4: string = 123; // This error is NOT suppressed
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:8:5

Cannot assign `y` to `x` because property `bar` is missing in object type [1] but exists in object type [2] in property
`x`. [prop-missing]

   D.js:8:5
   8| x = y;
          ^

References:
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [1]
   D.js:6:6
   6|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- D.js:8:5

Cannot assign `y` to `x` because property `foo` is missing in object type [1] but exists in object type [2] in property
`x`. [prop-missing]

   D.js:8:5
   8| x = y;
          ^

References:
   D.js:6:6
   6|   x: { bar: number }
           ^^^^^^^^^^^^^^^ [1]
   D.js:2:6
   2|   x: { foo: string }
           ^^^^^^^^^^^^^^^ [2]


Warning ------------------------------------------------------------------------------------------------------ A.js:14:1

Unused suppression comment.

   14| // $FlowFixMe Error unused suppression
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Warning ------------------------------------------------------------------------------------------------------- D.js:5:3

Unused suppression comment.

   5|   // $FlowFixMe - this location is only mentioned in the extra section
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Warning ------------------------------------------------------------------------------------------------------- E.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - this is unused because sketchy-null-string is off
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 3 errors and 3 warnings
